# ObjectIR

./: .gitignore  BOOTSTRAP_FOUNDATION.md  CONSTRUCT_COMPILER_FINAL_SUMMARY.md  CONSTRUCT_IMPLEMENTATION_COMPLETE.md  FINAL_SUMMARY.md  FORTRAN_90_IMPLEMENTATION_SUMMARY.md  HelloWorld.cs  IMPLEMENTATION_COMPLETE.md  INDEX.md  JsonValidatorTest.cs  LICENCE  MODULE_COMPOSITION_INSTRUCTION_SERIALIZATION_COMPLETE.md  ObjectIR-Full-Linux.tar.lzma  ObjectIR.sln  ObjectIR.slnx  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TEST_SUITE_COMPLETE.md  TodoApp.cs  TodoApp.json  VERIFICATION_CHECKLIST.txt  WORKFLOW.md  build.ps1  build_gui.ps1  contract_demo.ct  generated_example.cs  object_messaging_doc.md  test.cs.ir.json  test.f90  test_bson.cs  test_calculator.cs  test_calculator_scientific.cs  test_module.json  test_program_main.cs  test_program_main.ir.json
Contract/: FORTRAN_90_SPEC.md
JsonValidatorTest/: JsonValidatorTest.csproj  Program.cs
ObjectIR.CSharpBackend/: AdvancedExamples.cs  CSharpCodeGenerator.cs  ObjectIR.CSharpBackend.csproj  README.md
ObjectIR.CSharpTests/: ConstructLanguageTests.cs  IRBuilderTests.cs  ModuleCompositionTests.cs  ModuleLoaderCachingTests.cs  ModuleLoaderIntegrationTests.cs  ModuleLoaderTextParsingTests.cs  ObjectIR.CSharpTests.csproj  Program.cs
ObjectIR.CppRuntime/: 00_START_HERE.txt  ARCHITECTURE.md  BUILD_FIXED.md  CHECKLIST_AND_SUMMARY.md  CMakeLists.txt  COMPLETE.md  CTestTestfile.cmake  FEATURES.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE_README.md  INDEX.md  INTEGRATION_GUIDE.md  PIPELINE_IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START_PIPELINE.md  README.md  RUNTIME_PIPELINE.md
ObjectIR.CppRuntime/examples/: calculator_example.cpp  todoapp_example.cpp  unified_runtime.cpp
ObjectIR.CppRuntime/include/: instruction_executor.hpp  ir_instruction.hpp  ir_loader.hpp  objectir_runtime.hpp  patterns.hpp
ObjectIR.CppRuntime/src/: instruction_executor.cpp  ir_loader.cpp  objectir_runtime.cpp  runtime_c_api.cpp
ObjectIR.Examples/: BsonSerializationExample.cs  ConstructLanguageExample.cs  ModuleLoaderExample.cs  ObjectIR.Examples.csproj  Program.cs
ObjectIR.Fortran/: Program.cs  hello.f90  hello.oir  main.f90  main.oir  main_NEW.oir  main_calls.f90  main_final.oir  test_subroutine.f90
ObjectIR.Fortran/Compiler/: FortranAST.cs  FortranCompiler.cs  FortranIntrinsicRegistry.cs  FortranLanguageCompiler.cs  FortranLexer.cs  FortranParser.cs  FortranToken.cs
ObjectIR.Runtime.Wrapper/: NativeRuntime.cs  ObjectIR.Runtime.Wrapper.csproj
ObjectIR.Tools/: ObjectIR.Tools.csproj
ObjectIR.UnifiedRuntime/: ObjectIR.UnifiedRuntime.csproj  Program.cs
Old/: Readme.md
Old/ObjectIR.CSharpBackend/: CSharpInstructionVisitor.cs  ObjectIR.CSharpBackend.csproj  Program.cs  RoslynCodeGenerator.cs
Old/ObjectIR.CSharpFrontend/: AST.cs  BootstrapManager.cs  CSharpBodyCompiler.cs  CommandLineParser.cs  CompilerOptions.cs  CompilerService.cs  FrontendWithBodies.ir.json  Lexer.cs  MultiPassCompiler.cs  ObjectIR.CSharpFrontend.csproj  Parser.cs  Program.cs  README.md  RoslynCompiler.cs  RoslynToIREmitter.cs  SemanticAnalyzer.cs  TestBody.ir.json  bootstrap_build.ps1  bootstrap_build_fortran.ps1  link_ir.ps1  test_calculator.cs  test_calculator_scientific.cs
docs/: ARCHITECTURE.md  BSON_SERIALIZATION.md  CONSTRUCT_COMPILER.md  CONSTRUCT_COMPILER_DOCUMENTATION_INDEX.md  CONSTRUCT_COMPILER_README.md  CONSTRUCT_QUICK_REFERENCE.md  CSharpFrontend_IR_Gaps.md  FORTRAN_90_COMPILER.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTION_SERIALIZATION.md  MODULELOADER_IMPLEMENTATION.md  MODULELOADER_REFERENCE.md  MODULE_COMPOSITION.md  MODULE_DUMPING.md  MODULE_INTROSPECTION.md  MODULE_LOADER.md  OBJECTIR_FOB_SPEC.md  OBJECTIR_JSON_SPEC.md  QUICK_REFERENCE.md  SELF_HOSTING_STRATEGY.md  SERIALIZATION.md  TEST_COVERAGE.md  VM_INSTRUCTIONS_TEXT_FORMAT.md  objectir-module.schema.json  spec.md
docs/examples/: README.md  control_flow.ir  factorial.ir  simple_addition.ir
examples/: CalculatorExample.cs  FeatureWalkthrough.cs
specs/: ObjectIRV2.tex  ObjectIRV2_CSharp.tex
src/OIC/: CAST.cs  CCompiler.cs  CLI_GUIDE.md  CLexer.cs  CParser.cs  FORMAT_OPTIONS.md  OIC.csproj  Program.cs  SERIALIZATION_FORMATS.md  TYPES_AND_IO.md  TYPES_AND_IO_FEATURES.md  TYPES_AND_IO_IMPLEMENTATION.md  advanced_example.c  example.c  my_report.txt  result.txt  stdio_example.c  test.c  test_complex_printf.c  test_debug.c  test_multi_func.c  test_multiple_printf.c  test_no_printf.c  test_printf_basic.c  test_printf_multiple.c  test_printf_simple.c  test_printf_with_var.c  test_printf_with_vars.c  test_with_printf.c
src/OIFortran/: Program.cs  test.fob  test.json  test_subroutine.oir
src/OIRRuntime/: OIRuntime.csproj  Program.cs  TodoApp.fob
src/ObjectIR.CSharpBackend/: CSharpInstructionVisitor.cs  Program.cs
src/ObjectIR.CSharpTests/: FortranCompilerTests.cs  FortranLexerTests.cs  InstructionSerializationTests.cs  ModuleLoaderFileIOTests.cs  ObjectIR.CSharpTests.csproj  SerializationExtensionsTests.cs
src/ObjectIR.ContractFrontend/: AST.cs  Emitter.cs  Lexer.cs  ObjectIR.ContractFrontend.csproj  Parser.cs  Program.cs
src/ObjectIR.Core/: ObjectIR.Core.csproj
src/ObjectIR.CppRuntime/: CMakeLists.txt  GUI_BUILD_GUIDE.md  INDEX.md  PIPELINE_VISUAL_GUIDE.md  QUICK_START_PIPELINE.md  STDLIB_SPEC.md  build_gui.sh
src/ObjectIR.CppRuntime/examples/: fob_test.cpp  format_test.cpp  pipeline_example.cpp
src/ObjectIR.CppRuntime/include/: collections_stubs.hpp  fob_loader.hpp  instruction_executor.hpp  io_stubs.hpp  ir_instruction.hpp  ir_loader.hpp  ir_text_parser.hpp  math_stubs.hpp  objectir_runtime.hpp  stdlib.hpp
src/ObjectIR.CppRuntime/src/: fob_loader.cpp  gui_frontend.cpp  instruction_executor.cpp  ir_loader.cpp  ir_loader_old.cpp  ir_text_parser.cpp  main.cpp  objectir_runtime.cpp  runtime_c_api.cpp  stdlib.cpp  test_fob_loader.cpp
src/ObjectIR.Examples/: DebugBsonRoundTrip.cs  ModuleCompositionExample.cs  ObjectIR.Examples.csproj  Program.cs  TodoAppExample.cs
src/ObjectIR.Lua52Runtime/: README.md
test_calculator/: test_calculator.ir.json
(+45 files in other folders)
